# kanban_backend

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  log4rs.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
deployment/: Dockerfile  docker-compose.yml
docs/: deployment.md  generate_docs.md  linter.md
perf/: cleanup.sh  cleanup.sql  run_performance_test.sh  script.js  seeds.sql  startup.sh  users.json
postgresdb/: Dockerfile  init-schema.sql
src/: context.rs  main.rs  response.rs
src/api/: context.rs  mod.rs  response.rs
src/api/controllers/: auth.rs  tasks.rs
src/app/: auth.rs  mod.rs  repositories.rs  tasks.rs
src/controllers/: auth.rs  tasks.rs
src/model/: database.rs  mod.rs  sessions.rs  tasks.rs  types.rs  users.rs
src/storage/: mod.rs
src/storage/db/: database.rs  mod.rs  sessions.rs  tasks.rs  users.rs
src/storage/inmemory/: mod.rs  sessions.rs  tasks.rs  users.rs
